Estilizando o opções.html

--- a/super23/Adm/opcoes.html
+++ b/super23/Adm/opcoes.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Opções do ADM</title>
+    <link rel="stylesheet" href=",/opcoes.css">
 </head>
 
 <body>
-    <table width="75%" border="0" align="Left">
+    <table>
         <!-- CLIENTES -->
         <tr>
             <td><b>Clientes (usuários)</b></td>
