Mudei uma virgula e uma pasta que crieisem querer

--- a/super23/Adm/opcoes.html
+++ b/super23/Adm/opcoes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Opções do ADM</title>
-    <link rel="stylesheet" href=",/opcoes.css">
+    <link rel="stylesheet" href="./opcoes.css">
 </head>
 
 <body>
