--- a/super23/login.html
+++ b/super23/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./login.css">
+    <link rel="stylesheet" href="./Css/login.css">
     <title>Login</title>
     <form action="login.php" method="POST">
         <table width="51%" border="0" align="center" cellpadding="1" cellspacing="0">
